--- a/src/assets/components/card/card.module.scss
+++ b/src/assets/components/card/card.module.scss
@@ -19,18 +19,13 @@
         height: 60%;
 
         .likeButton{
-            width: 25px;
-            height: 25px;
+            width: 40px;
+            height: 40px;
             position: absolute;
-            background-color: rgba(239, 236, 231, 1);
             border-radius: 10px;
             margin: 5px 0 0 5px;
             cursor: pointer;
-
-            padding: 10px; //??
-            img{
-                object-fit: fill;
-            }
+            object-fit: cover;
         }
 
         img{
