--- a/src/assets/components/card/card.module.scss
+++ b/src/assets/components/card/card.module.scss
@@ -75,3 +75,102 @@
         }
     }
 }
+
+.backIfActive{
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .bigWrapper{
+        z-index: 2;
+        width: 40%;
+        height: 80%;
+        background-color: rgba(239, 236, 231, 1);
+        border-radius: 20px;
+        padding: 20px;
+        .mainWrap{
+            display: flex;
+            height: 75%;
+            background-color: rgb(245, 220, 0);
+            .image{
+                flex: 2.5;
+                margin-top: 7%;
+                margin-bottom: 5%;
+                background: rgb(255, 255, 255);
+                border-radius: 10px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                .imgBig{
+                    width: 100%;
+                    height: 100%;
+                    object-fit: scale-down;
+                }
+            }
+            .options{
+                flex: 3;
+                position: relative; //core
+                background: rgb(189, 108, 108);
+                padding-left: 20px;
+                height: 93.5%;
+                .volume{
+                    display: flex;
+                    border-bottom: 1px solid #000;
+                    width: 70%;
+                    margin-bottom: 30px;
+                    align-items: baseline;
+                    & > *{
+                        margin-right: 10px;
+                    }
+                    &:last-child{
+                        margin-bottom: 0;
+                    }   
+                }
+                .counter{
+                    display: flex;
+                    position: absolute; //core
+                    bottom: 0px;
+                    max-width: 180px;
+                    height: 60px;
+                    border-radius: 10px;
+                    background-color: rgba(216, 216, 216, 1);
+                    align-items: center;
+                    img{
+                        scale: 0.8;
+                        height: 100%;
+                        width: 33%;
+                        &:first-of-type{   //беее
+                            scale: 0.7;
+                            transform: translateY(3px);
+                        }
+                    }
+                    input::-webkit-outer-spin-button,
+                    input::-webkit-inner-spin-button {
+                        -webkit-appearance: none;
+                    }   
+                    input{
+                        text-align:center;
+                        width: 33%;
+                        border: 0;
+                        padding: 10px;
+                        font-size: 28px;
+                        background-color: rgba(216, 216, 216, 1);
+                        outline: 0;
+                    }
+                }
+                .bigCardAdd{
+                    position: absolute;
+                    bottom: 16px;
+                    right: 45px;
+                    scale: 1.99;
+                }
+            }
+        }
+    }
+}
