--- a/src/assets/components/cardInCart/cardInCart.module.scss
+++ b/src/assets/components/cardInCart/cardInCart.module.scss
@@ -24,33 +24,73 @@
     }
 
     .textWrap{
-        flex:3;
-        padding: 10px 25px;
-        height: 100%;
+        flex: 1;
+        height: 130px;
+        padding-left: 20px;
+
+        white-space: nowrap;
+        overflow: hidden;
+        display: grid;
+        
         & > *{
             margin: 0;
         }
-        p{
-            font-size: 0.8vw;
-            &:last-of-type{
-                margin-top: 1.5vw;
-            }
-        }
-        h3{
-            font-size: 1.3vw;
+        :last-child{
+            font-size: 27px;
+            align-self: flex-end;
         }
     }
 
-    .cancelWrap{
-        flex:1;
-        scale: 0.8;
-        cursor: pointer;
-        overflow: hidden;
+    .rightWrap{
+        flex: 1;
+        max-width: 150px;
+        height: 130px;
+        position: relative;
+        .removeBtn{
+            top: 0;
+            right: 5px;
+            position: absolute;
+            scale: 1.4;
+            cursor: pointer;
+            opacity: 0.7;
+            transition: opacity 0.1s ease-in-out;
+            &:hover{
+                opacity: 1;
+            }
+        }
 
-        opacity: 0.5;
-        transition: opacity 0.1s ease-in-out;
-        &:hover{
-            opacity: 1; //костыль + цвет креста слишком белый
+        .counter{
+            position: absolute;
+            display: flex;
+            bottom: 0;
+            right: 0;
+            max-width: 150px;
+            height: 50px;
+            border-radius: 10px;
+            background-color: rgba(216, 216, 216, 1);
+            align-items: center;
+            img{
+                scale: 0.8;
+                height: 100%;
+                width: 33%;
+                &:first-of-type{   //беее
+                    scale: 0.7;
+                    transform: translateY(3px);
+                }
+            }
+            input::-webkit-outer-spin-button,
+            input::-webkit-inner-spin-button {
+                -webkit-appearance: none;
+            }   
+            input{
+                text-align:center;
+                width: 33%;
+                border: 0;
+                padding: 10px;
+                font-size: 23px;
+                background-color: rgba(216, 216, 216, 1);
+                outline: 0;
+            }
         }
     }
 }
