--- a/src/assets/components/card/card.module.scss
+++ b/src/assets/components/card/card.module.scss
@@ -97,11 +97,10 @@
         .mainWrap{
             display: flex;
             height: 75%;
-            background-color: rgb(245, 220, 0);
             .image{
                 flex: 2.5;
                 margin-top: 7%;
-                margin-bottom: 5%;
+                padding: 20px;
                 background: rgb(255, 255, 255);
                 border-radius: 10px;
                 display: flex;
@@ -116,22 +115,32 @@
             .options{
                 flex: 3;
                 position: relative; //core
-                background: rgb(189, 108, 108);
                 padding-left: 20px;
-                height: 93.5%;
-                .volume{
-                    display: flex;
-                    border-bottom: 1px solid #000;
-                    width: 70%;
-                    margin-bottom: 30px;
-                    align-items: baseline;
-                    & > *{
-                        margin-right: 10px;
-                    }
-                    &:last-child{
-                        margin-bottom: 0;
-                    }   
+                height: 100%;
+                .closeButton{
+                    position: absolute;
+                    right: 0;
                 }
+                .flex{
+                    display: flex;
+                    
+                    .volume{
+                        display: flex;
+                        border-bottom: 1px solid #000;
+                        width: 70%;
+                        margin-bottom: 30px;
+                        
+                        & > *{
+                            margin-right: 10px;
+                        }
+                    }
+                    .priceRight{
+                        position:absolute;
+                        right: 5%;
+                    }
+                }
+                
+
                 .counter{
                     display: flex;
                     position: absolute; //core
