--- a/src/assets/components/favorites/favorites.module.scss
+++ b/src/assets/components/favorites/favorites.module.scss
@@ -27,9 +27,35 @@
     }
 
     .fragrCards{
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
+        display: grid;
+        grid-template-columns: 20% 20% 20% 20% 20%;
+        justify-items: center;
+        min-height: 550px;
+        &>*{
+            margin-right: 0;
+        }
+    }
+
+    .placeHolder{
+        padding-top: 50px;
+        height: 500px;
+        text-align: center;
+        img{
+            scale: 2;
+        }
+        h2{
+            margin-top: 50px;
+        }
+        button{
+            width: 250px;
+            height: 70px;
+            border-radius: 15px;
+            margin-top: 50px;
+            border: none;
+            background-color: rgb(103, 61, 171);
+            font-size: 22px;
+            color: white;
+        }
     }
 }
 
