--- a/src/assets/components/drawer/drawer.module.scss
+++ b/src/assets/components/drawer/drawer.module.scss
@@ -28,45 +28,69 @@
         }
     }
     
-
-    .cardInCart{
-        flex:1;
-        overflow-y: auto; //стилизовать
-    }
-
-    ul{
-        list-style-type: none;
-        padding: 0;
-        & > :first-child{
-            margin-bottom: 15px;
+    .content{ // добавь много карт, уберай по одной кнопка шатается
+        height: calc(100vh - 110px);
+        display: flex;
+        flex-direction: column;
+        .cardInCart{
+            flex:1;
+            overflow-y: auto; //стилизовать
         }
-        li{
-            display: flex;
-            align-items: baseline;
+
+        ul{
+            list-style-type: none;
+            padding: 0;
+            & > :first-child{
+                margin-bottom: 15px;
+            }
+            li{
+                display: flex;
+                align-items: baseline;
+                
+                span{
+                    font-size: 20px;
+                }
+                div{
+                    flex: 1;
+                    height: 1px;
+                    border-bottom: 1px dashed black;
+                    margin: 0 5px 0 5px;
+                }
+                b{
+                    font-size: 20px;
+                }
+            }
             
-            span{
-                font-size: 20px;
-            }
-            div{
-                flex: 1;
-                height: 1px;
-                border-bottom: 1px dashed black;
-                margin: 0 5px 0 5px;
-            }
-            b{
-                font-size: 20px;
-            }
         }
-        
-    }
 
-    button{
-        width: 100%;
-        height: 60px;
-        border-radius: 15px;
-        border: none;
-        background-color: rgba(106, 207, 71, 1);
-        font-size: 20px;
-        color: white;
+        .bottomBtn{
+            width: 100%;
+            height: 60px;
+            border-radius: 15px;
+            border: none;
+            background-color: rgba(106, 207, 71, 1);
+            font-size: 20px;
+            color: white;
+        }
+    }
+    .emptyCart {
+        flex: 1;
+        text-align: center;
+        padding-top: 250px;
+    
+        h2 {
+            font-size: 30px
+        }
+    
+        button {
+            width: 75%;
+            height: 60px;
+            border-radius: 15px;
+            margin-top: 50px;
+            border: none;
+            background-color: rgb(103, 61, 171);
+            font-size: 22px;
+            color: white;
+        }
     }
 }
