--- a/src/assets/components/header/header.module.scss
+++ b/src/assets/components/header/header.module.scss
@@ -1,5 +1,3 @@
-$main-purple: rgb(103, 61, 171);
-
 a:link { text-decoration: none; }
 a:visited { text-decoration: none; }
 a:hover { text-decoration: none; }
@@ -9,7 +7,7 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: end;
-    border-bottom: 1px solid $main-purple;
+    border-bottom: 1px solid rgb(103, 61, 171);
     padding: 30px;
     h1{
         font-size: 48px;
