--- a/src/assets/components/drawer/drawer.module.scss
+++ b/src/assets/components/drawer/drawer.module.scss
@@ -22,6 +22,7 @@
         justify-content: space-between;
         margin-bottom: 20px;
         h2{
+            font-family: 'Inter';
             margin: 0;
             font-size: 35px;
             align-self: flex-end;
@@ -29,6 +30,7 @@
         img{
             -webkit-user-drag: none;
             cursor: pointer;
+            scale: 1.2;
         }
     }
     
@@ -53,6 +55,7 @@
                 
                 span{
                     font-size: 20px;
+                    font-family: 'Inter';
                 }
                 div{
                     flex: 1;
@@ -61,6 +64,7 @@
                     margin: 0 5px 0 5px;
                 }
                 b{
+                    font-family: 'Inter';
                     font-size: 20px;
                 }
             }
@@ -74,6 +78,7 @@
             border: none;
             background-color: rgba(106, 207, 71, 1);
             font-size: 20px;
+            font-family: 'Inter';
             color: white;
         }
     }
@@ -82,8 +87,13 @@
         text-align: center;
         padding-top: 250px;
     
-        h2 {
+        h2{
+            font-family: 'Inter';
             font-size: 30px
+        }
+        p{
+            font-family: 'Inter';
+            font-size: 18px
         }
     
         button {
