--- a/src/assets/components/header/header.module.scss
+++ b/src/assets/components/header/header.module.scss
@@ -6,27 +6,32 @@ a:active { text-decoration: none; }
 header{
     display: flex;
     justify-content: space-between;
-    align-items: end;
-    border-bottom: 1px solid rgb(103, 61, 171);
+    border-bottom: 2px solid rgb(103, 61, 171);
     padding: 30px;
     h1{
+        font-family: "Inter";
+        font-weight: 600;
         font-size: 48px;
-        margin-bottom: 0;
-        color: rgba(45, 17, 92, 1);
+        margin: 10px 0 0 0;
+        color: rgb(81, 29, 165);
+        
     }
     .headerRight{
         display: flex;
         align-items: end;
-        & > * {
-            margin-left: 30px;
+        &>*{
+            margin: 0 0 0 30px;
+        }        
+        a{
+            line-height: 0;
         }
         img{
-            scale: 1.3;
+            scale: 1.5;
             margin-bottom: 3px;
         }
         h3{
-            margin-bottom: 0;
-            margin-left: 15px;
-        }
+            font-family: 'Inter';
+            font-weight: 800;
+        } 
     }
 }
