--- a/src/assets/components/pages/content.module.scss
+++ b/src/assets/components/pages/content.module.scss
@@ -21,6 +21,7 @@
                     margin-right: 20px;
                     float: left;
                     font-size: 20px;
+                    font-family: 'Inter';
                 }
                 .active{
                     color: white;
@@ -43,6 +44,7 @@
                 font-size: 16px;
                 background-color: rgb(255, 251, 246);
                 outline: 0;
+                font-family: 'Inter';
             }
         }
     }
