--- a/src/assets/components/card/card.module.scss
+++ b/src/assets/components/card/card.module.scss
@@ -203,5 +203,11 @@
                 }
             }
         }
+        .description{
+            margin: 15px;
+            font-family: 'Inter';
+            font-weight: 400;
+            font-size: 20px;
+        }
     }
 }
